# neonwranglerpy

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  paper.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: conf.py  index.rst  requirements.txt
neonwranglerpy/: __init__.py  __main__.py
neonwranglerpy/data/: table_types.csv
neonwranglerpy/data/All_NEON_TOS_Plots_V9/: All_NEON_TOS_Plot_Points_V9.shp  All_NEON_TOS_Plot_Points_V9.shp.xml  All_NEON_TOS_Plot_Points_V9.shx
neonwranglerpy/fetcher/: __init__.py  fetcher.py
neonwranglerpy/lib/: __init__.py  clip_las_plot.py  clip_plot.py  clip_raster.py  crop_plot_data.py  defaults.py  download.py  extract_hsi_to_tif.py  extract_lidar_data.py  extract_training_data.py  getZipURL.py  get_opts.py  getzipurls.py  loadByProduct.py  predict_aop_data.py  retrieve_aop_data.py  retrieve_coords_itc.py  retrieve_dist_to_utm.py  retrieve_vst_data.py  stackByTable.py  stackDataFilesParaller.py  stackdatafiles.py  tools.py  utils.py  zipsByProduct.py
neonwranglerpy/lib/data/: table_types.csv
neonwranglerpy/utilities/: __init__.py  byTileAOP.py  defaults.py  get_opts.py  get_tile_urls.py  getzipurls.py  loadByProduct.py  stackByTable.py  stackdatafiles.py  tools.py  utils.py  zipsByProduct.py
tests/: conftest.py  test_extract_lidar_data.py  test_extract_training_data.py  test_h5refl2array.py  test_lib.py  test_predict_aop_data.py  test_units.py  test_utilites.py
tests/raw_data/: dataframe.dbf  dataframe.shp  dataframe.shx  test.laz  test_plot_aop.csv  vst_data.csv
tests/raw_data/raster_data/DP3.30015.001/2018/FullSite/D16/2018_ABBY_2/L3/DiscreteLidar/CanopyHeightModelGtif/: NEON_D16_ABBY_DP3_559000_5070000_CHM.tif
tests/raw_data/raster_data/DP3.30015.001/2018/FullSite/D16/2018_ABBY_2/Metadata/DiscreteLidar/TileBoundary/kmls/: NEON_D16_ABBY_DP1_559000_5070000_classified_point_cloud.kml
tests/raw_data/raster_data/DP3.30015.001/2018/FullSite/D16/2018_ABBY_2/Metadata/DiscreteLidar/TileBoundary/shps/: NEON_D16_ABBY_DP1_559000_5070000_classified_point_cloud.shp  NEON_D16_ABBY_DP1_559000_5070000_classified_point_cloud.shx
